--- a/blog-vue/src/assets/css/public.css
+++ b/blog-vue/src/assets/css/public.css
@@ -10,10 +10,13 @@ body {
 
 .main-box {
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 .nav-box {
   overflow: hidden;
   padding: 50px;
 }
+
+
+
